Only snake_case to deal with on linting
